# slai-the-spire

./: .gitignore  pyproject.toml
notebooks/: embeddings.ipynb
src/: test.py  test_ecs.py
src/agents/: base.py  dqn_a.py  evaluation.py  pseudorandom.py  random.py  reward.py
src/agents/a2c/: actor.py  config.yml  encode.py  evaluation.py  model.py  reward.py  test.py  train.py  utils.py
src/agents/dqn/: config.yml  encode.py  encoder.py  explorer.py  memory.py  model.py  reward.py  test.py  train.py  utils.py
src/game/: action.py  const.py  constants.py  context.py  create.py  draw.py  drawer.py  main.py  map.py  map_.py  play_2.py  state.py  test.py  types.py  types_.py  utils.py
src/game/ai/: __init__.py  base.py  cultist.py  dummy.py  fungi_beast.py  jaw_worm.py  registry.py  the_guardian.py
src/game/battle/: comm.py  context.py  drawer.py  engine.py  state.py
src/game/combat/: action.py  ai.py  constant.py  context.py  create.py  drawer.py  effect.py  effect_queue.py  engine.py  entities.py  factories.py  handle_input.py  input.py  logic.py  main.py  manager.py  phase.py  processors.py  state.py  test.py  utils.py  view.py
src/game/components/: base.py  block.py  effect.py  energy.py  health.py  intent.py
src/game/core/: __init__.py  actor.py  card.py  char.py  combat_state.py  components.py  deck.py  disc_pile.py  draw_pile.py  effect.py  energy.py  entity.py  fsm.py  hand.py  intent.py  manager.py  modifier.py  monster.py  relic.py  room.py  (+2 more)
src/rl/: constants.py  encoding.py  evaluation.py  policies.py  reward.py  test.py  test_agent.py  utils.py
(+387 files in other folders)
