[tool.poetry]
name = "slai-the-spire"
version = "0.1.0"
description = "Training a Deep Reinforcement Learning agent to beat Slay the Spire."
authors = ["Guillermo Etchebarne <guillermo.etchebarne@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.isort]
force_single_line=true
lines_after_imports=2

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
