[tool.poetry]
name = "slai-the-spire"
version = "0.1.0"
description = "Training a Deep Reinforcement Learning agent to beat Slay the Spire."
authors = ["Guillermo Etchebarne <guillermo.etchebarne@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
ipdb = "^0.13.13"
torch = "^2.3.1"
tensorboard = "^2.17.0"
pyyaml = "^6.0.2"
click = "^8.1.8"
pynput = "^1.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^8.1.1"

[tool.isort]
force_single_line = true
single_line_exclusions = ["typing", "abc", "dataclasses"]
lines_after_imports = 2
line_length = 99

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
